--- a/Monografia_BI_Master_v02.ipynb
+++ b/Monografia_BI_Master_v02.ipynb
@@ -57,8 +57,9 @@
         "#Inserir usuário e key recebida no arquivo .json entre aspas\n",
         "import os, fnmatch\n",
         "import zipfile\n",
-        "os.environ['KAGGLE_USERNAME'] = \"calbuque\" # copiar do kaggle.json\n",
-        "os.environ['KAGGLE_KEY'] = \"1d095380238ab91098d1126f5344eaf3\" # copiar do kaggle.json\n",
+        "print('Insira username e key fornecida pelo Kaggle em substituicao ao XXXXXXX no código abaixo.')\n",
+        "os.environ['KAGGLE_USERNAME'] = \"XXXXXXXXXX\" # copiar do kaggle.json\n",
+        "os.environ['KAGGLE_KEY'] = \"XXXXXXXXXX\" # copiar do kaggle.json\n",
         "!kaggle competitions download -c chh-ola -p chh-ola\n",
         "#Os dados da competição ficarão no diretório /content/chh-ola\n",
         "os.chdir('/content/chh-ola')"
